--- a/src/views.properties
+++ b/src/views.properties
@@ -1,4 +1,2 @@
-spring.(class)=org.springframework.web.servlet.view.JstlView
-spring.url=spring.jsp
-showitems.class=org.springframework.web.servlet.view.JstlView
-showItems.url=/WEB-INF/htmlshowItems.html/showItems.html
+showItems.(class)=org.springframework.web.servlet.view.JstlView
+showItems.url=WEB-INF/jsp/showItems.jsp
